# polymind

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
data/traces/: 0572712a-5b66-40c3-8150-8dc973450d66.json  43f8f4dd-0437-4b72-a47a-287ce852a89e.json  6bd08b5e-f3d1-4ec2-9679-c6f182f66683.json
polymind/: __init__.py
polymind/agents/: nodes.py
polymind/evals/: harness.py
polymind/graph/: builder.py  edges.py  state.py
polymind/router/: router.py
polymind/utils/: config.py
tests/: test_polymind.py
