[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymind"
version = "0.1.0"
description = "Self-Evaluating Multi-Agent Research Scientist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core LangGraph + LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",    # OpenRouter uses OpenAI-compatible API
    "langchain-ollama>=0.1.0",    # Dedicated Ollama integration (ChatOllama)

    # LLM providers
    "ollama>=0.3.0",              # Python client for Ollama

    # Config
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Eval & data
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",

    # NLP utilities (for experiments)
    "nltk>=3.8.0",
    "datasets>=2.20.0",           # HuggingFace datasets

    # Tracing
    "langsmith>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
    "rich>=13.7.0",
]

[project.scripts]
polymind = "main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S"]
ignore = ["S101", "S102", "S603"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
